--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,24 @@ ul{
     list-style: none;
 }
 
+/* Reusable */
+.section_title{
+    text-align: center;
+    color: #2d2e2e;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
 /* Header */
 .header{
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .nav{
     display: flex;
@@ -39,11 +51,19 @@ ul{
     display: flex;
     align-items: center;
 }
-.nav_menu a, .contact_menu a{
+.nav_menu a{
     color: #2d2e2e;
     margin-left: 30px;
     font-size: 1rem;
     font-weight: 500;
+}
+.contact_menu a{
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 500;
+    background-color: #d60000;
+    padding: 2px 10px;
+    border-radius: 25px;
 }
 
 /* Home */
@@ -53,4 +73,57 @@ ul{
     background-image: url(../img/Background.png);
     background-position: center;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.home_content{
+    width: 90%;
+    margin: auto;
+}
+.home_content h3{
+    color: #d60000;
+    font-weight: 500;
+    font-size: 20px;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+}
+.home_content h1{
+    color: #2d2e2e;
+    font-size: 50px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.home_content p{
+    color: #2d2e2e;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+.home_btn{
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 400;
+    background-color: #d60000;
+    padding: 2px 10px;
+    border-radius: 25px;
+}
+
+/* Models */
+/* .models_content{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    width: 90%;
+    margin: auto;
+    background-color: blue;
+} */
+/* .models_card{
+    text-align: center;
+    background-color: #d60000;
+} */
+
+/* Discover */
+.discover_cards{
+
 }
